fix: fix topbar scrolling on mobile

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -65,7 +65,7 @@ body,
 #main {
     &.nav-modal-active {
         @media (--md-down) {
-            overflow-y: auto;
+            overflow-y: hidden;
         }
     }
 }
